--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -26,7 +26,21 @@ jobs:
       - name: Build project
         run: yarn build
 
-      - name: Deploy to VPS
+      - name: Deploy to VPS via SSH
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: ${{ secrets.VPS_HOST }}
+          username: ${{ secrets.VPS_USERNAME }}
+          key: ${{ secrets.VPS_SSH_KEY }}
+          port: 22
+          script: |
+            cd /var/www/erp-bahaa-eldin-front
+            git pull origin main
+            yarn install --frozen-lockfile
+            yarn build
+            systemctl reload nginx
+
+      - name: Copy built files to VPS
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.VPS_HOST }}
@@ -37,14 +51,4 @@ jobs:
           target: "/var/www/erp-bahaa-eldin-front"
           strip_components: 1
           rm: true
-
-      - name: Reload Nginx
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ secrets.VPS_HOST }}
-          username: ${{ secrets.VPS_USERNAME }}
-          key: ${{ secrets.VPS_SSH_KEY }}
-          port: 22
-          script: |
-            sudo systemctl reload nginx
 
