--- a/package.json
+++ b/package.json
@@ -35,8 +35,10 @@
     "clsx": "^2.1.1",
     "cmdk": "^1.1.1",
     "date-fns": "^4.1.0",
+    "laravel-echo": "^2.3.0",
     "lucide-react": "^0.546.0",
     "next-themes": "^0.4.6",
+    "pusher-js": "^8.4.0",
     "react": "^19.0.0",
     "react-day-picker": "^9.13.0",
     "react-dom": "^19.0.0",
